{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 165,
  "lineage": "01be82c5-9758-1de6-275a-530b88f6816b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stg_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:internet-gateway/igw-07db6a475b08a394c",
            "id": "igw-07db6a475b08a394c",
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_igw"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:internet-gateway/igw-0eb49a62a90d6ad21",
            "id": "igw-0eb49a62a90d6ad21",
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_igw"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg_db_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e419f55064052ff4",
            "owner_id": "356176154692",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dxd_cep_app_stg_db_rt"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg_dmz_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06ab65757d3caba3e",
            "owner_id": "356176154692",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07db6a475b08a394c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dxd_cep_app_stg_dmz_rt"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_internet_gateway.stg_internet_gateway",
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg_lambda_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0959e8a61e13df6f2",
            "owner_id": "356176154692",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dxd_cep_app_stg_lambda_rt"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_db_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09f5d60be3b28b97e",
            "owner_id": "356176154692",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dxd_cep_app_test_db_rt"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_dmz_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04c39460060953be4",
            "owner_id": "356176154692",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb49a62a90d6ad21",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dxd_cep_app_test_dmz_rt"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_internet_gateway.test_internet_gateway",
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_lambda_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ea7e762e012d8128",
            "owner_id": "356176154692",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dxd_cep_app_test_lambda_rt"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_db1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3759923afe86086",
            "route_table_id": "rtb-0e419f55064052ff4",
            "subnet_id": "subnet-0841f04f36e33560d"
          },
          "dependencies": [
            "aws_route_table.stg_db_rt",
            "aws_subnet.stg_private4_2a_sn",
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_db2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9f883d04bea4024",
            "route_table_id": "rtb-0e419f55064052ff4",
            "subnet_id": "subnet-01c99fd0b545c4a88"
          },
          "dependencies": [
            "aws_route_table.stg_db_rt",
            "aws_subnet.stg_private5_2b_sn",
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_db3_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0829ab164b3181340",
            "route_table_id": "rtb-0e419f55064052ff4",
            "subnet_id": "subnet-0b13444f058547ad8"
          },
          "dependencies": [
            "aws_route_table.stg_db_rt",
            "aws_subnet.stg_private6_2c_sn",
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_lambda1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f46b864f20fc06a",
            "route_table_id": "rtb-0959e8a61e13df6f2",
            "subnet_id": "subnet-0069a2ab09e37efa2"
          },
          "dependencies": [
            "aws_route_table.stg_lambda_rt",
            "aws_subnet.stg_private1_2a_sn",
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_lambda2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f981a1105bd0d0e",
            "route_table_id": "rtb-0959e8a61e13df6f2",
            "subnet_id": "subnet-06962846be360b24b"
          },
          "dependencies": [
            "aws_route_table.stg_lambda_rt",
            "aws_subnet.stg_private2_2b_sn",
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_lambda3_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f2e998a90f9667e",
            "route_table_id": "rtb-0959e8a61e13df6f2",
            "subnet_id": "subnet-0276c73ee01630ad8"
          },
          "dependencies": [
            "aws_route_table.stg_lambda_rt",
            "aws_subnet.stg_private3_2c_sn",
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_public1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b991d1c5382187b8",
            "route_table_id": "rtb-06ab65757d3caba3e",
            "subnet_id": "subnet-05b39e5879e0e73d5"
          },
          "dependencies": [
            "aws_internet_gateway.stg_internet_gateway",
            "aws_route_table.stg_dmz_rt",
            "aws_subnet.stg_public1_2a_sn",
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_public2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036dbfe23ea3a29aa",
            "route_table_id": "rtb-06ab65757d3caba3e",
            "subnet_id": "subnet-010da2a216eaabd32"
          },
          "dependencies": [
            "aws_internet_gateway.stg_internet_gateway",
            "aws_route_table.stg_dmz_rt",
            "aws_subnet.stg_public2_2b_sn",
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_public3_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0845fd4df8fb1ccfa",
            "route_table_id": "rtb-06ab65757d3caba3e",
            "subnet_id": "subnet-02c43e1d30066f2fc"
          },
          "dependencies": [
            "aws_internet_gateway.stg_internet_gateway",
            "aws_route_table.stg_dmz_rt",
            "aws_subnet.stg_public3_2c_sn",
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_db1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ee4d4d4c2dee9e3",
            "route_table_id": "rtb-09f5d60be3b28b97e",
            "subnet_id": "subnet-0fb5bea2890b09e6c"
          },
          "dependencies": [
            "aws_route_table.test_db_rt",
            "aws_subnet.test_private4_2a_sn",
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_db2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075241f211dc89d39",
            "route_table_id": "rtb-09f5d60be3b28b97e",
            "subnet_id": "subnet-06957c98830e3bacf"
          },
          "dependencies": [
            "aws_route_table.test_db_rt",
            "aws_subnet.test_private5_2b_sn",
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_db3_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee7747e1678d5e6b",
            "route_table_id": "rtb-09f5d60be3b28b97e",
            "subnet_id": "subnet-09eac40d4d08f0420"
          },
          "dependencies": [
            "aws_route_table.test_db_rt",
            "aws_subnet.test_private6_2c_sn",
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_lambda1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099c3682e6440119a",
            "route_table_id": "rtb-0ea7e762e012d8128",
            "subnet_id": "subnet-05ba142fe948e06c6"
          },
          "dependencies": [
            "aws_route_table.test_lambda_rt",
            "aws_subnet.test_private1_2a_sn",
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_lambda2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be0ec32ff74d1d69",
            "route_table_id": "rtb-0ea7e762e012d8128",
            "subnet_id": "subnet-09dfc61d02a2e89d7"
          },
          "dependencies": [
            "aws_route_table.test_lambda_rt",
            "aws_subnet.test_private2_2b_sn",
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_lambda3_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0052a17a917d16196",
            "route_table_id": "rtb-0ea7e762e012d8128",
            "subnet_id": "subnet-092a72ecefd302370"
          },
          "dependencies": [
            "aws_route_table.test_lambda_rt",
            "aws_subnet.test_private3_2c_sn",
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb5ce0888062eb3e",
            "route_table_id": "rtb-04c39460060953be4",
            "subnet_id": "subnet-04cd3cdac525d8dcb"
          },
          "dependencies": [
            "aws_internet_gateway.test_internet_gateway",
            "aws_route_table.test_dmz_rt",
            "aws_subnet.test_public1_2a_sn",
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e84ef7a2929f752",
            "route_table_id": "rtb-04c39460060953be4",
            "subnet_id": "subnet-09ecb82ec0275f759"
          },
          "dependencies": [
            "aws_internet_gateway.test_internet_gateway",
            "aws_route_table.test_dmz_rt",
            "aws_subnet.test_public2_2b_sn",
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public3_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c692556b6cc0fc29",
            "route_table_id": "rtb-04c39460060953be4",
            "subnet_id": "subnet-01b8dd56b4fe04ad5"
          },
          "dependencies": [
            "aws_internet_gateway.test_internet_gateway",
            "aws_route_table.test_dmz_rt",
            "aws_subnet.test_public3_2c_sn",
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_private1_2a_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-0069a2ab09e37efa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.29.96.0/22",
            "id": "subnet-0069a2ab09e37efa2",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_lambda_private_2a_sn"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_private2_2b_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-06962846be360b24b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.29.100.0/22",
            "id": "subnet-06962846be360b24b",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_lambda_private_2b_sn"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_private3_2c_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-0276c73ee01630ad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.29.104.0/22",
            "id": "subnet-0276c73ee01630ad8",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_lambda_private_2c_sn"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_private4_2a_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-0841f04f36e33560d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.29.111.0/24",
            "id": "subnet-0841f04f36e33560d",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_db_private_2a_sn"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_private5_2b_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-01c99fd0b545c4a88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.29.112.0/24",
            "id": "subnet-01c99fd0b545c4a88",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_db_private_2b_sn"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_private6_2c_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-0b13444f058547ad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.29.113.0/24",
            "id": "subnet-0b13444f058547ad8",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_db_private_2c_sn"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_public1_2a_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-05b39e5879e0e73d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.29.108.0/24",
            "id": "subnet-05b39e5879e0e73d5",
            "map_public_ip_on_launch": true,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_dmz_public_2a_sn"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_public2_2b_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-010da2a216eaabd32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.29.109.0/24",
            "id": "subnet-010da2a216eaabd32",
            "map_public_ip_on_launch": true,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_dmz_public_2b_sn"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_public3_2c_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-02c43e1d30066f2fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.29.110.0/24",
            "id": "subnet-02c43e1d30066f2fc",
            "map_public_ip_on_launch": true,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_dmz_public_2c_sn"
            },
            "vpc_id": "vpc-03c56cb12ecaf9b60"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_stg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_private1_2a_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-05ba142fe948e06c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.29.64.0/22",
            "id": "subnet-05ba142fe948e06c6",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_lambda_private_2a_sn"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_private2_2b_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-09dfc61d02a2e89d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.29.68.0/22",
            "id": "subnet-09dfc61d02a2e89d7",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_lambda_private_2b_sn"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_private3_2c_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-092a72ecefd302370",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.29.72.0/22",
            "id": "subnet-092a72ecefd302370",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_lambda_private_2c_sn"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_private4_2a_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-0fb5bea2890b09e6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.29.79.0/24",
            "id": "subnet-0fb5bea2890b09e6c",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_db_private_2a_sn"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_private5_2b_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-06957c98830e3bacf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.29.80.0/24",
            "id": "subnet-06957c98830e3bacf",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_db_private_2b_sn"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_private6_2c_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-09eac40d4d08f0420",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.29.81.0/24",
            "id": "subnet-09eac40d4d08f0420",
            "map_public_ip_on_launch": false,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_db_private_2c_sn"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public1_2a_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-04cd3cdac525d8dcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.29.76.0/24",
            "id": "subnet-04cd3cdac525d8dcb",
            "map_public_ip_on_launch": true,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_dmz_public_2a_sn"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public2_2b_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-09ecb82ec0275f759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.29.77.0/24",
            "id": "subnet-09ecb82ec0275f759",
            "map_public_ip_on_launch": true,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_dmz_public_2b_sn"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public3_2c_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:subnet/subnet-01b8dd56b4fe04ad5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.29.78.0/24",
            "id": "subnet-01b8dd56b4fe04ad5",
            "map_public_ip_on_launch": true,
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_dmz_public_2c_sn"
            },
            "vpc_id": "vpc-086782b9b88982e00"
          },
          "dependencies": [
            "aws_vpc.dxd_cep_app_test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dxd_cep_app_stg_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:vpc/vpc-03c56cb12ecaf9b60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.29.96.0/19",
            "default_network_acl_id": "acl-084019839d3ba4a45",
            "default_route_table_id": "rtb-0e86d9f4c558c4039",
            "default_security_group_id": "sg-00a0c152795103259",
            "dhcp_options_id": "dopt-f8487d9f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03c56cb12ecaf9b60",
            "instance_tenancy": "dedicated",
            "main_route_table_id": "rtb-0e86d9f4c558c4039",
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_stg_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dxd_cep_app_test_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:356176154692:vpc/vpc-086782b9b88982e00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.29.64.0/19",
            "default_network_acl_id": "acl-0beed8e27d8ce6b41",
            "default_route_table_id": "rtb-0e479eaf04a4a4a12",
            "default_security_group_id": "sg-01efa4fc9086ca088",
            "dhcp_options_id": "dopt-f8487d9f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-086782b9b88982e00",
            "instance_tenancy": "dedicated",
            "main_route_table_id": "rtb-0e479eaf04a4a4a12",
            "owner_id": "356176154692",
            "tags": {
              "Name": "dxd_cep_app_test_vpc"
            }
          }
        }
      ]
    }
  ]
}